kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
  namespace: webhooks
spec:
  selector:
    app: webhook-server
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: https
