kubernetes/customVWAC.yaml
# webhook-deployment.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: pod-validation-webhook
  namespace: webhooks
webhooks:
- name: webhook-service.webhooks.svc.cluster.local
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["CREATE", "UPDATE"]
    resources: ["pods"]
  clientConfig:
    service:
      name: webhook-service
      namespace: webhooks
      path: "/validate"
      port: 8443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDekNDQWZPZ0F3SUJBZ0lVQ2tZbi9PZnFzV25RRDRDUWJyV0t2ZDV6SXhBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF3d0tWMlZpYUc5dmF5QkRRVEFlRncweU5UQTBNVFV4TWpVeU1EUmFGdzB5TlRBMQpNVFV4TWpVeU1EUmFNQlV4RXpBUkJnTlZCQU1NQ2xkbFltaHZiMnNnUTBFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCCkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDYWlqU1ZHR0paTVc0RWFneS90RDBnaW5RZlhJT29EYVIvQlgzNnJxYXgKVEw5aFRIN1YyeTcxU2JEcFo0QkhiL2R3VUVjWXNhU3FkdGZadFUrNWk5RFkvamxWTmRySXVSVDRCNnFmZDRhZgpsd1h0Vnk2ZEJjM1 [...]
  admissionReviewVersions: ["v1"]
  failurePolicy: Fail  # Reject if webhook is down
  sideEffects: None
